fix: terraform installation

--- a/.github/workflows/tailscale-terraform.yaml
+++ b/.github/workflows/tailscale-terraform.yaml
@@ -11,45 +11,44 @@ on:
       - 'terraform/tailscale/**'
   workflow_dispatch:
 
-jobs:
-  apply:
-    runs-on: self-hosted
-    # FIX 1: Correct indentation for the container block
-    container:
-      image: hashicorp/terraform:1.14.3
+env:
+  TAILSCALE_OAUTH_CLIENT_ID: ${{ secrets.TAILSCALE_OAUTH_CLIENT_ID }}
+  TAILSCALE_OAUTH_CLIENT_SECRET: ${{ secrets.TAILSCALE_OAUTH_CLIENT_SECRET }}
+  TAILSCALE_TAILNET: ${{ secrets.TAILSCALE_TAILNET }}
 
+jobs:
+  terraform:
+    runs-on: self-hosted
+    defaults:
+      run:
+        working-directory: terraform/tailscale
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v6
 
-      # FIX 2: Removed 'hashicorp/setup-terraform'. 
-      # Since we are running INSIDE the hashicorp/terraform container, 
-      # the binary is already installed and in the PATH.
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.14.3
+          terraform_wrapper: false
+        
+      - name: Terraform fmt
+        id: fmt
+        run: terraform fmt -check
+        continue-on-error: true
 
-      - name: Terraform Init / Plan / Apply
-        shell: sh # 'bash' might not be available in Alpine-based Terraform images; 'sh' is safer.
-        env:
-          TAILSCALE_OAUTH_CLIENT_ID: ${{ secrets.TAILSCALE_OAUTH_CLIENT_ID }}
-          TAILSCALE_OAUTH_CLIENT_SECRET: ${{ secrets.TAILSCALE_OAUTH_CLIENT_SECRET }}
-          TAILSCALE_TAILNET: ${{ secrets.TAILSCALE_TAILNET }}
-        run: |
-          # Use standard shell flags for safety
-          set -eu
+      - name: Terraform Init
+        id: init
+        run: terraform init -input=false
 
-          cd terraform/tailscale
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate -no-color
 
-          terraform init -input=false
+      - name: Terraform Plan
+        id: plan
+        run: terraform plan -no-color -input=false
 
-          # Import logic (unchanged)
-          if ! terraform state list 2>/dev/null | grep -q '^tailscale_acl\.policy$'; then
-             echo "Importing ACL Policy..."
-             terraform import -input=false tailscale_acl.policy acl
-          fi
-
-          if ! terraform state list 2>/dev/null | grep -q '^tailscale_tailnet_settings\.tailnet$'; then
-             echo "Importing Tailnet Settings..."
-             terraform import -input=false tailscale_tailnet_settings.tailnet tailnet_settings
-          fi
-
-          terraform plan -input=false
-          terraform apply -input=false -auto-approve
+      - name: Terraform Apply
+        id: apply
+        run: terraform apply -auto-approve -no-color
