--- a/gitops/apps/gateway/config/gateway.yaml
+++ b/gitops/apps/gateway/config/gateway.yaml
@@ -5,6 +5,11 @@ metadata:
   namespace: ingress
 spec:
   gatewayClassName: cilium
+  # Reserve a specific LAN IP for this Gateway so it doesn't consume the
+  # Pi-hole DNS IP (192.168.1.240).
+  addresses:
+    - type: IPAddress
+      value: 192.168.1.241
   listeners:
     - name: http
       protocol: HTTP
