--- a/gitops/apps/gateway/config/vault/httproute.yaml
+++ b/gitops/apps/gateway/config/vault/httproute.yaml
@@ -1,19 +1,19 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: pihole
-  namespace: pihole
+  name: vault
+  namespace: vault
 spec:
   parentRefs:
     - name: homelab
       namespace: ingress
   hostnames:
-    - pihole.home.lab
+    - vault.home.lab
   rules:
     - matches:
         - path:
             type: PathPrefix
             value: /
       backendRefs:
-        - name: pihole-web
-          port: 80
+        - name: vault-ui
+          port: 8200
