--- a/gitops/apps/pihole/application.yaml
+++ b/gitops/apps/pihole/application.yaml
@@ -17,6 +17,9 @@ spec:
     - repoURL: https://github.com/nunoferna/homelab.git
       targetRevision: main
       ref: values
+    - repoURL: https://github.com/nunoferna/homelab.git
+      targetRevision: main
+      path: gitops/apps/pihole/config
   destination:
     server: https://kubernetes.default.svc
     namespace: pihole
