--- a/gitops/apps/secrets/application.yaml
+++ b/gitops/apps/secrets/application.yaml
@@ -18,6 +18,12 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    retry:
+      limit: 10
+      backoff:
+        duration: 20s
+        factor: 2
+        maxDuration: 3m
     syncOptions:
       - CreateNamespace=true
       - SkipDryRunOnMissingResource=true
