--- a/gitops/apps/pihole/values.yaml
+++ b/gitops/apps/pihole/values.yaml
@@ -1,4 +1,34 @@
 # Pi-hole values (homelab defaults).
+adlists:
+  # HaGeZi Collections
+  - https://raw.githubusercontent.com/hagezi/dns-blocklists/main/adblock/gambling.txt
+  - https://raw.githubusercontent.com/hagezi/dns-blocklists/main/adblock/spam-tlds.txt
+  - https://raw.githubusercontent.com/hagezi/dns-blocklists/main/adblock/tif.txt
+  - https://raw.githubusercontent.com/hagezi/dns-blocklists/main/adblock/ultimate.txt
+
+  # Firebog Suspicious Lists
+  - https://raw.githubusercontent.com/PolishFiltersTeam/KADhosts/master/KADhosts.txt
+  - https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.Spam/hosts
+  - https://v.firebog.net/hosts/static/w3kbl.txt
+
+  # Firebog Advertising Lists
+  - https://adaway.org/hosts.txt
+  - https://v.firebog.net/hosts/AdguardDNS.txt
+  - https://raw.githubusercontent.com/anudeepND/blacklist/master/adservers.txt
+  - https://v.firebog.net/hosts/Easylist.txt
+  - https://raw.githubusercontent.com/FadeMind/hosts.extras/master/UncheckyAds/hosts
+
+  # Firebog Tracking & Telemetry Lists
+  - https://v.firebog.net/hosts/Easyprivacy.txt
+  - https://v.firebog.net/hosts/Prigent-Ads.txt
+  - https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.2o7Net/hosts
+  - https://raw.githubusercontent.com/crazy-max/WindowsSpyBlocker/master/data/hosts/spy.txt
+  - https://hostfiles.frogeye.fr/firstparty-trackers-hosts.txt
+
+  # Firebog Malicious Lists
+  - https://v.firebog.net/hosts/Prigent-Crypto.txt
+  - https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.Risk/hosts
+
 admin:
   enabled: true
   existingSecret: pihole-admin
@@ -35,8 +65,6 @@ extraEnvVars:
   FTLCONF_dns_upstreams: |-
     1.1.1.1
     1.0.0.1
-    8.8.8.8
-    8.8.4.4
     2606:4700:4700::1111
     2606:4700:4700::1001
   FTLCONF_dhcp_ipv6: true
