feat: dnssec active and clean argo values

--- a/gitops/apps/pihole/values.yaml
+++ b/gitops/apps/pihole/values.yaml
@@ -66,12 +66,13 @@ extraEnvVars:
   FTLCONF_dhcp_end: 192.168.1.239
   FTLCONF_dhcp_router: 192.168.1.254
   FTLCONF_dns_reply_host_IPv4: 192.168.1.10
+  FTLCONF_dhcp_ipv6: true
   FTLCONF_dns_listeningMode: "LOCAL"
   FTLCONF_dns_upstreams:
     - 1.1.1.1
     - 1.0.0.1
     - 2606:4700:4700::1111
     - 2606:4700:4700::1001
-  FTLCONF_dhcp_ipv6: true
   FTLCONF_dns_interface: "eth0"
   FTLCONF_dns_domain_name: "home.lab"
+  FTLCONF_dns_dnssec: true
