--- a/gitops/apps/gateway/application.yaml
+++ b/gitops/apps/gateway/application.yaml
@@ -14,6 +14,8 @@ spec:
     - repoURL: https://github.com/nunoferna/homelab.git
       targetRevision: main
       path: gitops/apps/gateway/config
+      directory:
+        recurse: true
   destination:
     server: https://kubernetes.default.svc
     namespace: ingress
