--- a/gitops/apps/cilium/values.yaml
+++ b/gitops/apps/cilium/values.yaml
@@ -1,9 +1,7 @@
 # Cilium for k3s/Raspberry Pi.
-# NOTE: this must be paired with k3s `disable-kube-proxy: true`.
+
 kubeProxyReplacement: "true"
 
-# On single-node k3s, pin API server to localhost to avoid relying on
-# service routing during early bootstrap.
 k8sServiceHost: "127.0.0.1"
 k8sServicePort: "6443"
 
@@ -19,7 +17,7 @@ k8sClientRateLimit:
 
 enableIPv4Masquerade: true
 ipv6:
-  enabled: true
+  enabled: false
 bpf:
   masquerade: true
 
