--- a/gitops/apps/pihole/application.yaml
+++ b/gitops/apps/pihole/application.yaml
@@ -10,7 +10,7 @@ spec:
   sources:
     - repoURL: https://mojo2600.github.io/pihole-kubernetes/
       chart: pihole
-      targetRevision: "*"
+      targetRevision: "2.35.0"
       helm:
         valueFiles:
           - $values/gitops/apps/pihole/values.yaml
