--- a/gitops/apps/tailscale/application.yaml
+++ b/gitops/apps/tailscale/application.yaml
@@ -10,7 +10,7 @@ spec:
   sources:
     - repoURL: https://pkgs.tailscale.com/helmcharts
       chart: tailscale-operator
-      targetRevision: "*"
+      targetRevision: "1.92.5"
       helm:
         valueFiles:
           - $values/gitops/apps/tailscale/values.yaml
