--- a/gitops/apps/gateway/config/vault/httproute.yaml
+++ b/gitops/apps/gateway/config/vault/httproute.yaml
@@ -7,6 +7,7 @@ spec:
   parentRefs:
     - name: homelab
       namespace: ingress
+      sectionName: https
   hostnames:
     - vault.home.lab
   rules:
