--- a/.github/workflows/tailscale-terraform.yaml
+++ b/.github/workflows/tailscale-terraform.yaml
@@ -8,7 +8,7 @@ on:
   push:
     branches: ["main"]
     paths:
-      - 'terraform/tailscale/**'
+      - "terraform/tailscale/**"
   workflow_dispatch:
 
 env:
@@ -31,7 +31,7 @@ jobs:
         with:
           terraform_version: 1.14.3
           terraform_wrapper: false
-        
+
       - name: Terraform fmt
         id: fmt
         run: terraform fmt -check
