--- a/gitops/apps/gateway/config/argocd/httproute.yaml
+++ b/gitops/apps/gateway/config/argocd/httproute.yaml
@@ -7,6 +7,7 @@ spec:
   parentRefs:
     - name: homelab
       namespace: ingress
+      sectionName: https
   hostnames:
     - argo.home.lab
   rules:
@@ -16,4 +17,4 @@ spec:
             value: /
       backendRefs:
         - name: argocd-server
-          port: 80
+          port: 443
