--- a/gitops/apps/gateway/config/gateway.yaml
+++ b/gitops/apps/gateway/config/gateway.yaml
@@ -12,6 +12,19 @@ spec:
     - name: http
       protocol: HTTP
       port: 80
+      hostname: "*.home.lab"
+      allowedRoutes:
+        namespaces:
+          from: All
+    - name: https
+      protocol: HTTPS
+      port: 443
+      hostname: "*.home.lab"
+      tls:
+        mode: Terminate
+        certificateRefs:
+          - kind: Secret
+            name: homelab-gateway-tls
       allowedRoutes:
         namespaces:
           from: All
