--- a/gitops/apps/secrets/config/clustersecretstore-vault.yaml
+++ b/gitops/apps/secrets/config/clustersecretstore-vault.yaml
@@ -5,9 +5,14 @@ metadata:
 spec:
   provider:
     vault:
-      server: "http://vault.vault.svc:8200"
+      server: "https://vault.vault.svc:8200"
       path: "secret"
       version: "v2"
+      caProvider:
+        type: Secret
+        name: homelab-ca
+        key: tls.crt
+        namespace: cert-manager
       auth:
         kubernetes:
           mountPath: "kubernetes"
