--- a/gitops/apps/vault/values.yaml
+++ b/gitops/apps/vault/values.yaml
@@ -1,7 +1,7 @@
 # Vault values for a single-node homelab.
 
 global:
-  tlsDisable: true
+  tlsDisable: false
 
 server:
   ha:
@@ -9,10 +9,28 @@ server:
 
   standalone:
     enabled: true
+    config: |
+      ui = true
+      listener "tcp" {
+        address = "[::]:8200"
+        cluster_address = "[::]:8201"
+        tls_disable = 0
+        tls_cert_file = "/vault/tls/vault-server-tls/tls.crt"
+        tls_key_file = "/vault/tls/vault-server-tls/tls.key"
+      }
+      storage "file" {
+        path = "/vault/data"
+      }
+      disable_mlock = true
 
   dataStorage:
     enabled: true
     size: 5Gi
+
+  extraVolumes:
+    - type: secret
+      name: vault-server-tls
+      path: /vault/tls
 
 ui:
   enabled: true
