--- a/.github/workflows/layer1-bootstrap.yaml
+++ b/.github/workflows/layer1-bootstrap.yaml
@@ -6,21 +6,38 @@ concurrency:
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
     paths:
-      - 'bootstrap/**'
+      - "bootstrap/**"
   workflow_dispatch:
 
 jobs:
   bootstrap-host:
     runs-on: self-hosted
-    
+
     steps:
       - name: Checkout
         uses: actions/checkout@v6
+      - name: Ensure minimal Python (Debian/Raspbian compatible)
+        run: sudo apt install -y python3 python3-pip
 
-      - name: Run Host Bootstrap
+      - name: Create venv and install Ansible
         run: |
-          cd bootstrap
-          chmod +x main.sh
-          ./main.sh
+          python3 -m venv .venv
+          . .venv/bin/activate
+          pip install --upgrade pip
+          pip install ansible ansible-core
+
+      - name: Install Ansible Galaxy collections and roles (if any)
+        run: |
+          . .venv/bin/activate
+          if [ -f ansible/requirements.yml ]; then
+            ansible-galaxy collection install -r ansible/requirements.yml || true
+            ansible-galaxy install -r ansible/requirements.yml -p ansible/roles || true
+          fi
+
+      - name: Run Ansible bootstrap playbook
+        run: |
+          . .venv/bin/activate
+          cd ansible
+          ansible-playbook playbooks/k8s_bootstrap.yml
