--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,4 +1,6 @@
 ---
 collections:
+  - name: community.general
+    version: ">=12.2.0"
   - name: kubernetes.core
-    version: ">=3.0.0"
+    version: ">=6.2.0"
