--- a/ansible/roles/k3s/meta/main.yml
+++ b/ansible/roles/k3s/meta/main.yml
@@ -2,7 +2,8 @@
 
 galaxy_info:
   author: Nuno Fernandes
-  description: Kubernetes cluster health verification
+  description: K3s lightweight Kubernetes distribution
+  company: NOF Homelab
   license: MIT
   min_ansible_version: "2.14"
   platforms:
@@ -10,9 +11,9 @@ galaxy_info:
       versions:
         - all
   galaxy_tags:
+    - system
+    - common
     - kubernetes
-    - verification
 
 dependencies:
-  - role: k3s
-  - role: argocd
+  - role: common
