--- a/ansible/roles/vault/meta/main.yml
+++ b/ansible/roles/vault/meta/main.yml
@@ -2,7 +2,7 @@
 
 galaxy_info:
   author: Nuno Fernandes
-  description: Kubernetes cluster health verification
+  description: HashiCorp Vault initialization and configuration
   license: MIT
   min_ansible_version: "2.14"
   platforms:
@@ -10,9 +10,8 @@ galaxy_info:
       versions:
         - all
   galaxy_tags:
-    - kubernetes
-    - verification
+    - vault
+    - secrets
+    - security
 
-dependencies:
-  - role: k3s
-  - role: argocd
+dependencies: []
