--- a/gitops/apps/pihole/values.yaml
+++ b/gitops/apps/pihole/values.yaml
@@ -72,8 +72,7 @@ extraEnvVars:
     2606:4700:4700::1111
     2606:4700:4700::1001
   FTLCONF_dns_hosts: |-
-    192.168.1.240 argo.home.lab
-    192.168.1.240 vault.home.lab
+    192.168.1.240 *.home.lab
   FTLCONF_dns_interface: "eth0"
   FTLCONF_dns_domain_name: "home.lab"
   FTLCONF_dns_dnssec: true
