fix: handle clium on ansible only

--- a/ansible/roles/k3s/files/cilium-values.yaml
+++ b/ansible/roles/k3s/files/cilium-values.yaml
@@ -1,5 +1,14 @@
 # Cilium for k3s/Raspberry Pi.
 
+ipam:
+  mode: "kubernetes"
+k8sServiceHost: "127.0.0.1"
+k8sServicePort: "6443"
+kubeProxyReplacement: "true"
+routingMode: "native"
+autoDirectNodeRoutes: true
+ipv4NativeRoutingCIDR: 10.42.0.0/16
+
 # Enable Cilium L2-aware LoadBalancer on the LAN.
 l2announcements:
   enabled: true
