feat: add infra gateway

--- a/ansible/roles/k3s/tasks/main.yml
+++ b/ansible/roles/k3s/tasks/main.yml
@@ -45,6 +45,30 @@
   changed_when: "'created' in k3s_gateway_api_crds.stdout or 'configured' in k3s_gateway_api_crds.stdout"
   tags: [k3s, cilium]
 
+- name: Check if Helm is installed
+  ansible.builtin.command: helm version
+  register: k3s_helm_check
+  ignore_errors: true
+  changed_when: false
+  tags: [k3s, helm]
+
+- name: Install pinned Helm v3
+  when: k3s_helm_check.rc != 0 or 'v3' not in k3s_helm_check.stdout
+  tags: [k3s, helm]
+  block:
+    - name: Download Helm 3 installation script
+      ansible.builtin.get_url:
+        url: https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
+        dest: /tmp/get_helm.sh
+        mode: '0700'
+
+    - name: Run Helm installation script
+      ansible.builtin.command: /tmp/get_helm.sh
+      environment:
+        HELM_INSTALL_DIR: /usr/local/bin
+        DESIRED_VERSION: v3.19.5
+      changed_when: true
+
 - name: Add Cilium Helm repository
   kubernetes.core.helm_repository:
     name: cilium
@@ -59,7 +83,8 @@
     chart_ref: cilium/cilium
     release_namespace: kube-system
     create_namespace: true
-    values: "{{ lookup('file', role_path ~ '/files/cilium-values.yaml') | from_yaml }}"
+    values_files:
+      - "{{ role_path }}/files/cilium-values.yaml"
   environment:
     KUBECONFIG: "{{ k3s_kubeconfig }}"
   tags: [k3s, cilium]
