--- a/ansible/roles/argocd/files/httproute.yaml
+++ b/ansible/roles/argocd/files/httproute.yaml
@@ -3,10 +3,12 @@ kind: HTTPRoute
 metadata:
   name: argocd
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "5"
 spec:
   parentRefs:
-    - name: homelab
-      namespace: ingress
+    - name: homelab-gateway
+      namespace: gateway-infra
   hostnames:
     - argo.home.lab
   rules:
