--- a/ansible/roles/argocd/files/infrastructure-apps.yaml
+++ b/ansible/roles/argocd/files/infrastructure-apps.yaml
@@ -11,6 +11,7 @@ spec:
     path: gitops/infrastructure
     directory:
       recurse: true
+      include: "**/application.yaml"
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
