--- a/ansible/roles/k3s/files/cilium-values.yaml
+++ b/ansible/roles/k3s/files/cilium-values.yaml
@@ -1,13 +1,8 @@
 # Cilium for k3s/Raspberry Pi.
 
-ipam:
-  mode: "kubernetes"
-k8sServiceHost: "127.0.0.1"
+k8sServiceHost: "192.168.1.253"
 k8sServicePort: "6443"
 kubeProxyReplacement: "true"
-routingMode: "native"
-autoDirectNodeRoutes: true
-ipv4NativeRoutingCIDR: 10.42.0.0/16
 
 # Enable Cilium L2-aware LoadBalancer on the LAN.
 l2announcements:
@@ -34,16 +29,4 @@ gatewayAPI:
 operator:
   replicas: 1
 
-authentication:
-  mutual:
-    spire:
-      enabled: true
-      install:
-        enabled: true
-
-hubble:
-  enabled: true
-  relay:
-    enabled: true
-  ui:
-    enabled: true
+devices: "eth0"
