--- a/gitops/infrastructure/gateway/gateway.yaml
+++ b/gitops/infrastructure/gateway/gateway.yaml
@@ -1,13 +1,15 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
-  name: homelab
-  namespace: ingress
+  name: homelab-gateway
+  namespace: gateway-infra
+  annotations:
+    argocd.argoproj.io/sync-wave: "4"
 spec:
   gatewayClassName: cilium
   addresses:
     - type: IPAddress
-      value: 192.168.1.240
+      value: 192.168.1.1
   listeners:
     - name: http
       protocol: HTTP
