--- a/gitops/infrastructure/vault/application.yaml
+++ b/gitops/infrastructure/vault/application.yaml
@@ -15,6 +15,9 @@ spec:
     - repoURL: https://github.com/nunoferna/homelab.git
       targetRevision: main
       ref: values
+    - repoURL: https://github.com/nunoferna/homelab.git
+      targetRevision: main
+      path: gitops/infrastructure/vault
   destination:
     server: https://kubernetes.default.svc
     namespace: vault
