--- a/gitops/infrastructure/vault/httproute.yaml
+++ b/gitops/infrastructure/vault/httproute.yaml
@@ -3,10 +3,12 @@ kind: HTTPRoute
 metadata:
   name: vault
   namespace: vault
+  annotations:
+    argocd.argoproj.io/sync-wave: "5"
 spec:
   parentRefs:
-    - name: homelab
-      namespace: ingress
+    - name: homelab-gateway
+      namespace: gateway-infra
   hostnames:
     - vault.home.lab
   rules:
