feat: add pki cert-manager to vault

--- a/gitops/infrastructure/cert-manager/base/vault-issuer.yaml
+++ b/gitops/infrastructure/cert-manager/base/vault-issuer.yaml
@@ -10,3 +10,5 @@ spec:
       kubernetes:
         mountPath: /v1/auth/kubernetes
         role: cert-manager
+        serviceAccountRef:
+          name: cert-manager
