--- a/.github/workflows/build-backstage.yaml
+++ b/.github/workflows/build-backstage.yaml
@@ -3,7 +3,8 @@ name: Build Backstage
 on:
   push:
     branches: ["main"]
-    paths: ["backstage/**"] # Adjust to where you put the code
+    paths: ["backstage/**"]
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
@@ -22,6 +23,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -47,6 +51,7 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/amd64,linux/arm64
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
