--- a/gitops/infrastructure/backstage/catalog/users.yaml
+++ b/gitops/infrastructure/backstage/catalog/users.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: User
 metadata:
-  name: nuno
+  name: nunoferna
 spec:
   profile:
     displayName: Nuno Fernandes
